[gd_scene load_steps=14 format=3 uid="uid://dy7ow80tmbed1"]

[ext_resource type="Script" path="res://levelup.gd" id="1_osrwr"]
[ext_resource type="FontFile" uid="uid://drm8ab63ifxro" path="res://Kenney Bold.ttf" id="2_mx4vl"]
[ext_resource type="Texture2D" uid="uid://dcudi8rlcg41p" path="res://power ups/bubble attack.png" id="3_s7bkr"]
[ext_resource type="Texture2D" uid="uid://xoshll326pkc" path="res://power ups/bubble number.png" id="4_cdpgu"]
[ext_resource type="AudioStream" uid="uid://by1b5e6537lca" path="res://menu.wav" id="4_tyf86"]
[ext_resource type="Texture2D" uid="uid://d2py52q65qk7t" path="res://power ups/heart.png" id="5_1rqba"]
[ext_resource type="AudioStream" uid="uid://cmk53gk5tpr7n" path="res://select.wav" id="5_rk1cq"]
[ext_resource type="Texture2D" uid="uid://cck66nb5xb4yu" path="res://power ups/summon.png" id="6_xtof7"]
[ext_resource type="Texture2D" uid="uid://clrqyx0inpl02" path="res://power ups/summon number.png" id="7_o81ul"]
[ext_resource type="Texture2D" uid="uid://d3h8wwmel8a0p" path="res://power ups/wings.png" id="8_1p0qt"]
[ext_resource type="Texture2D" uid="uid://c50g7x86636c" path="res://power ups/heal.png" id="11_eg1aw"]

[sub_resource type="LabelSettings" id="LabelSettings_yk3sg"]
font = ExtResource("2_mx4vl")
font_size = 40
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ibjjl"]
font = ExtResource("2_mx4vl")
font_size = 18
shadow_size = 10
shadow_color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="levelup" type="CanvasLayer"]
script = ExtResource("1_osrwr")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1293.0
offset_bottom = 733.0
color = Color(0, 0.839216, 0.584314, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_top = 100.0
offset_right = 295.0
offset_bottom = 160.0
grow_horizontal = 2
text = "choose a power up 
"
label_settings = SubResource("LabelSettings_yk3sg")

[node name="bubble_button" type="Button" parent="."]
offset_left = 268.0
offset_top = 1185.0
offset_right = 468.0
offset_bottom = 1385.0

[node name="Sprite2D" type="Sprite2D" parent="bubble_button"]
position = Vector2(101, 97)
scale = Vector2(8.35714, 8.35714)
texture = ExtResource("3_s7bkr")

[node name="hover" type="AudioStreamPlayer2D" parent="bubble_button"]
stream = ExtResource("4_tyf86")
attenuation = 0.0150928

[node name="select" type="AudioStreamPlayer" parent="bubble_button"]
stream = ExtResource("5_rk1cq")

[node name="more_bubble_button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1020.0
offset_top = 267.0
offset_right = 1220.0
offset_bottom = 467.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="more_bubble_button"]
position = Vector2(100, 99)
scale = Vector2(6, 6)
texture = ExtResource("4_cdpgu")

[node name="hover" type="AudioStreamPlayer" parent="more_bubble_button"]
stream = ExtResource("4_tyf86")

[node name="select" type="AudioStreamPlayer" parent="more_bubble_button"]
stream = ExtResource("5_rk1cq")

[node name="heal_button" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 447.0
offset_top = -157.0
offset_right = 647.0
offset_bottom = 43.0
grow_horizontal = 0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="heal_button"]
position = Vector2(101, 103)
scale = Vector2(0.465736, 0.465736)
texture = ExtResource("5_1rqba")

[node name="hover" type="AudioStreamPlayer" parent="heal_button"]
stream = ExtResource("4_tyf86")

[node name="select" type="AudioStreamPlayer" parent="heal_button"]
stream = ExtResource("5_rk1cq")

[node name="summon_button" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1140.0
offset_top = 452.0
offset_right = -940.0
offset_bottom = 652.0
grow_horizontal = 0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="summon_button"]
position = Vector2(103, 100)
scale = Vector2(5.28831, 5.28831)
texture = ExtResource("6_xtof7")

[node name="hover" type="AudioStreamPlayer" parent="summon_button"]
stream = ExtResource("4_tyf86")

[node name="select" type="AudioStreamPlayer" parent="summon_button"]
stream = ExtResource("5_rk1cq")

[node name="more_summon_button" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -750.0
offset_top = 460.0
offset_right = -550.0
offset_bottom = 660.0
grow_horizontal = 0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="more_summon_button"]
position = Vector2(100, 101)
scale = Vector2(3.68939, 3.68939)
texture = ExtResource("7_o81ul")

[node name="hover" type="AudioStreamPlayer" parent="more_summon_button"]
stream = ExtResource("4_tyf86")

[node name="select" type="AudioStreamPlayer" parent="more_summon_button"]
stream = ExtResource("5_rk1cq")

[node name="speed_button" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -298.0
offset_top = 466.0
offset_right = -98.0
offset_bottom = 666.0
grow_horizontal = 0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="speed_button"]
position = Vector2(101, 106)
scale = Vector2(0.3619, 0.3619)
texture = ExtResource("8_1p0qt")

[node name="hover" type="AudioStreamPlayer" parent="speed_button"]
stream = ExtResource("4_tyf86")

[node name="select" type="AudioStreamPlayer" parent="speed_button"]
stream = ExtResource("5_rk1cq")

[node name="heal" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -283.0
offset_top = 765.0
offset_right = -83.0
offset_bottom = 965.0
grow_horizontal = 0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="heal"]
position = Vector2(101, 106)
scale = Vector2(0.3619, 0.3619)
texture = ExtResource("11_eg1aw")

[node name="hover" type="AudioStreamPlayer" parent="heal"]
stream = ExtResource("4_tyf86")

[node name="select" type="AudioStreamPlayer" parent="heal"]
stream = ExtResource("5_rk1cq")

[node name="description" type="Label" parent="."]
offset_left = 238.0
offset_top = 529.0
offset_right = 1078.0
offset_bottom = 626.0
size_flags_horizontal = 0
text = "item description displayed here"
label_settings = SubResource("LabelSettings_ibjjl")
horizontal_alignment = 1

[connection signal="done" from="." to="." method="_on_done"]
[connection signal="mouse_entered" from="bubble_button" to="." method="_on_bubble_button_mouse_entered"]
[connection signal="pressed" from="bubble_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="bubble_button" to="." method="_on_bubble_button_pressed"]
[connection signal="mouse_entered" from="more_bubble_button" to="." method="_on_more_bubble_button_mouse_entered"]
[connection signal="pressed" from="more_bubble_button" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="more_bubble_button" to="." method="_on_more_bubble_button_pressed"]
[connection signal="mouse_entered" from="heal_button" to="." method="_on_heal_button_mouse_entered"]
[connection signal="pressed" from="heal_button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="heal_button" to="." method="_on_heal_button_pressed"]
[connection signal="mouse_entered" from="summon_button" to="." method="_on_summon_button_mouse_entered"]
[connection signal="pressed" from="summon_button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="summon_button" to="." method="_on_summon_button_pressed"]
[connection signal="mouse_entered" from="more_summon_button" to="." method="_on_more_summon_button_mouse_entered"]
[connection signal="pressed" from="more_summon_button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="more_summon_button" to="." method="_on_more_summon_button_pressed"]
[connection signal="mouse_entered" from="speed_button" to="." method="_on_speed_button_mouse_entered"]
[connection signal="pressed" from="speed_button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="speed_button" to="." method="_on_speed_button_pressed"]
[connection signal="mouse_entered" from="heal" to="." method="_on_heal_mouse_entered"]
[connection signal="mouse_entered" from="heal" to="." method="_on_speed_button_mouse_entered"]
[connection signal="pressed" from="heal" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="heal" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="heal" to="." method="_on_heal_pressed"]
